--- a/Just-me.html
+++ b/Just-me.html
@@ -66,17 +66,20 @@
     <section class="project" id="project">
       <h1>projects</h1>
         <div class="iframebox">
-          <iframe src="https://ihezuodivine.github.io/E-commerce-website/Ecom%20.html" frameborder="100"></iframe>
+          <iframe src="https://ihezuodivine.github.io/E-commerce-website/Ecom%20.html" 
+             scrolling="no"  frameborder="100"></iframe>
            <h2>E-commerce</h2>
            <a href="https://ihezuodivine.github.io/E-commerce-website/Ecom%20.html">View Project</a>
         </div>
         <div class="iframebox">
-          <iframe src="https://ihezuodivine.github.io/Smart-landing-page-/Smart%20landing%20page.html" frameborder="0"></iframe>
+          <iframe src="https://ihezuodivine.github.io/Smart-landing-page-/Smart%20landing%20page.html" 
+              scrolling="no" frameborder="0"></iframe>
            <h2>Smart page</h2>
            <a href="https://ihezuodivine.github.io/Smart-landing-page-/Smart%20landing%20page.html">View Project</a>
         </div>
         <div class="iframebox">
-          <iframe src="https://ihezuodivine.github.io/Chikezie-portfolio-/Chikezie.html" frameborder="0"></iframe>
+          <iframe src="https://ihezuodivine.github.io/Chikezie-portfolio-/Chikezie.html" 
+              scrolling="no" frameborder="0"></iframe>
            <h2>Portfolio</h2>
            <a href="https://ihezuodivine.github.io/Chikezie-portfolio-/Chikezie.html">View project</a>
         </div>
