--- a/index.html
+++ b/index.html
@@ -109,6 +109,12 @@
     <section class="project" id="project">
       <h1>projects</h1>
         <div class="iframebox">
+          <iframe src="https://ihezuodivine.github.io/Kezie-store/Main.html" 
+            frameborder="100" scrolling="no"></iframe>
+            <h2>E-commerce Store</h2>
+            <a href="https://ihezuodivine.github.io/Kezie-store/Main.html">View Project</a>
+        </div>
+        <div class="iframebox">
           <iframe src="https://ihezuodivine.github.io/E-commerce-website/Ecom%20.html" 
              scrolling="no"  frameborder="100"></iframe>
            <h2>E-commerce</h2>
