--- a/index.html
+++ b/index.html
@@ -61,9 +61,10 @@
       <p>I build clean, responsive websites and bring ideas to life with 
          code and creativity.</p>
 
-      <p class="CV"><a href="MY RESUME.IHEZUO.DIVINE.pdf">&#x25BC; Download my CV</a></p>
       <a href=""  class="seework" id="seework">Go back</a>
       <a href="#iframe2" class="seework" id="seework2">See My Work</a>
+      
+      <p class="CV"><a href="MY RESUME.IHEZUO.DIVINE.pdf">&#x25BC; Download my CV</a></p>
     </section>
   
 
@@ -106,8 +107,20 @@
 
 
     <main id="main">
+
+    <article class="articleskill">
+      <h2>Skills</h2>
+      <div class="skillscontainer">
+        <h3>HTML</h3>
+        <h3>CSS</h3>
+        <h3>JavaScript</h3>
+        <h3>React</h3>
+        <h3>Git & Github</h3>
+      </div>
+    </article>
+
     <section class="project" id="project">
-      <h1>projects</h1>
+      <h1> UNCOVER MY PROJECT</h1>
         <div class="iframebox">
           <iframe src="https://ihezuodivine.github.io/Kezie-store/Main.html" 
             frameborder="100" scrolling="no"></iframe>
@@ -135,18 +148,7 @@
            <a href="https://ihezuodivine.github.io/Chikezie-portfolio-/Chikezie.html">View project</a>
         </div>
     </section>
-
-    <article class="articleskill">
-      <h2>Skills</h2>
-          <div class="skillscontainer">
-          <h3>HTML</h3>
-          <h3>CSS</h3>
-          <h3>JavaScript</h3>
-          <h3>React</h3>
-          <h3>Git & Github</h3>
-        </div>
-    </article>
-
+    
     <section class="services" id="services">
       <h2>My Services</h2>
         <div class="service-list">
