--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     </article>
 
     <section class="project" id="project">
-      <h1> UNCOVER MY PROJECT</h1>
+      <h1>Code, Creativity & Real Results</h1>
         <div class="iframebox">
           <iframe src="https://ihezuodivine.github.io/Kezie-store/Main.html" 
             frameborder="100" scrolling="no"></iframe>
@@ -148,7 +148,7 @@
            <a href="https://ihezuodivine.github.io/Chikezie-portfolio-/Chikezie.html">View project</a>
         </div>
     </section>
-    
+
     <section class="services" id="services">
       <h2>My Services</h2>
         <div class="service-list">
